--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Amazon Test Suite</th></tr>
-<tr><td><a href="#t0">HomePageTest</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24,452</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,910</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Amazon Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">HomePageTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.ecom.werbapp.test.AmazonHomePageTest</td><td><a href="#m0">testAmazonHomePageSourceURL</a></td><td rowspan="1">1617893979403</td><td rowspan="1">115</td></tr><tr class="passedeven"><td><a href="#m1">testAmazonHomePageTitle</a></td><td rowspan="1">1617893984744</td><td rowspan="1">23</td></tr><tr class="passedodd"><td rowspan="2">com.ecom.werbapp.test.AmazonNavigationTest</td><td><a href="#m2">testMobileNavigationLink</a></td><td rowspan="1">1617893989409</td><td rowspan="1">2440</td></tr><tr class="passedodd"><td><a href="#m3">testTodaysDealNavigationLink</a></td><td rowspan="1">1617893996266</td><td rowspan="1">2385</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.ecom.werbapp.test.TestNgGroupTest</td><td><a href="#m0">lauchChromeTest</a></td><td rowspan="1">1617896290085</td><td rowspan="1">3537</td></tr><tr class="passedeven"><td><a href="#m1">lauchFireFoxTest</a></td><td rowspan="1">1617896293637</td><td rowspan="1">5272</td></tr><tr class="passedeven"><td><a href="#m2">testAmazonHomePageSourceURL</a></td><td rowspan="1">1617896300819</td><td rowspan="1">127</td></tr><tr class="passedeven"><td><a href="#m3">testAmazonHomePageTitle</a></td><td rowspan="1">1617896298918</td><td rowspan="1">19</td></tr><tr class="passedeven"><td><a href="#m4">testToVerifyLogin</a></td><td rowspan="1">1617896298942</td><td rowspan="1">1875</td></tr></tbody>
 </table>
-<h2>HomePageTest</h2><h3 id="m0">com.ecom.werbapp.test.AmazonHomePageTest#testAmazonHomePageSourceURL</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.ecom.werbapp.test.AmazonHomePageTest#testAmazonHomePageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.ecom.werbapp.test.AmazonNavigationTest#testMobileNavigationLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.ecom.werbapp.test.AmazonNavigationTest#testTodaysDealNavigationLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.ecom.werbapp.test.TestNgGroupTest#lauchChromeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.ecom.werbapp.test.TestNgGroupTest#lauchFireFoxTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.ecom.werbapp.test.TestNgGroupTest#testAmazonHomePageSourceURL</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.ecom.werbapp.test.TestNgGroupTest#testAmazonHomePageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.ecom.werbapp.test.TestNgGroupTest#testToVerifyLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
