--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ecom.werbapp.test.AmazonHomePageTest</td>
+<td>com.ecom.werbapp.test.TestNgGroupTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,11 +12,28 @@
 <tr>
 <td>&nbsp;</td>
 <td>testAmazonHomePageSourceURL</td>
-<td>&nbsp;</td></tr>
+<td>Chrome </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testToVerifyLogin</td>
+<td>FireFox </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>testAmazonHomePageTitle</td>
-<td>&nbsp;</td></tr>
+<td>Chrome </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>lauchChromeTest</td>
+<td>Chrome </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>lauchFireFoxTest</td>
+<td>FireFox </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -24,16 +41,8 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>lauchBrowser</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>cloaseBrowser</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
