--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Chrome</td><td>TestNgGroupTest.testAmazonHomePageTitle()[pri:1, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]<br/>TestNgGroupTest.testAmazonHomePageSourceURL()[pri:2, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]<br/>TestNgGroupTest.lauchChromeTest()[pri:0, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]<br/></td></tr>
+<tr><td>FireFox</td><td>TestNgGroupTest.testToVerifyLogin()[pri:1, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]<br/>TestNgGroupTest.lauchFireFoxTest()[pri:0, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]<br/></td></tr>
+</table>
