testng with selenium

--- a/test-output/old/Amazon Test Suite/methods.html
+++ b/test-output/old/Amazon Test Suite/methods.html
@@ -1,28 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Amazon Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8168b5">  <td>21/04/08 14:59:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonHomePageTest.lauchBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">&gt;&gt;lauchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="8168b5">  <td>21/04/08 14:59:39</td>   <td>3714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonHomePageTest.testAmazonHomePageSourceURL()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">testAmazonHomePageSourceURL</td> 
-  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="8168b5">  <td>21/04/08 14:59:39</td>   <td>3840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonHomePageTest.cloaseBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">&lt;&lt;cloaseBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="8168b5">  <td>21/04/08 14:59:40</td>   <td>5086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonHomePageTest.lauchBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">&gt;&gt;lauchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="8168b5">  <td>21/04/08 14:59:44</td>   <td>9055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonHomePageTest.testAmazonHomePageTitle()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">testAmazonHomePageTitle</td> 
-  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="8168b5">  <td>21/04/08 14:59:44</td>   <td>9080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonHomePageTest.cloaseBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">&lt;&lt;cloaseBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="a5c39e">  <td>21/04/08 14:59:45</td>   <td>9991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonNavigationTest.lauchBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">&gt;&gt;lauchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="a5c39e">  <td>21/04/08 14:59:49</td>   <td>13720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonNavigationTest.testMobileNavigationLink()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">testMobileNavigationLink</td> 
-  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="a5c39e">  <td>21/04/08 14:59:51</td>   <td>16165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonNavigationTest.cloaseBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">&lt;&lt;cloaseBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="a5c39e">  <td>21/04/08 14:59:52</td>   <td>17061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonNavigationTest.lauchBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">&gt;&gt;lauchBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="a5c39e">  <td>21/04/08 14:59:56</td>   <td>20577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonNavigationTest.testTodaysDealNavigationLink()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">testTodaysDealNavigationLink</td> 
-  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
-<tr bgcolor="a5c39e">  <td>21/04/08 14:59:58</td>   <td>22963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonNavigationTest.cloaseBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">&lt;&lt;cloaseBrowser</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1488804799</td>   <td></td> </tr>
+<tr bgcolor="8168b5">  <td>21/04/08 16:42:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonHomePageTest.lauchBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">&gt;&gt;lauchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="8168b5">  <td>21/04/08 16:42:50</td>   <td>4983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonHomePageTest.testAmazonHomePageSourceURL()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">testAmazonHomePageSourceURL</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="8168b5">  <td>21/04/08 16:42:51</td>   <td>5089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonHomePageTest.cloaseBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">&lt;&lt;cloaseBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="8168b5">  <td>21/04/08 16:42:52</td>   <td>7012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonHomePageTest.lauchBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">&gt;&gt;lauchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="8168b5">  <td>21/04/08 16:42:56</td>   <td>10792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonHomePageTest.testAmazonHomePageTitle()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">testAmazonHomePageTitle</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="8168b5">  <td>21/04/08 16:42:56</td>   <td>10845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonHomePageTest.cloaseBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonHomePageTest@131276c2]">&lt;&lt;cloaseBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a5c39e">  <td>21/04/08 16:42:57</td>   <td>11731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonNavigationTest.lauchBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">&gt;&gt;lauchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a5c39e">  <td>21/04/08 16:43:01</td>   <td>15429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonNavigationTest.testMobileNavigationLink()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">testMobileNavigationLink</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a5c39e">  <td>21/04/08 16:43:04</td>   <td>18079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonNavigationTest.cloaseBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">&lt;&lt;cloaseBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a5c39e">  <td>21/04/08 16:43:05</td>   <td>19802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonNavigationTest.lauchBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">&gt;&gt;lauchBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a5c39e">  <td>21/04/08 16:43:09</td>   <td>23871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonNavigationTest.testTodaysDealNavigationLink()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">testTodaysDealNavigationLink</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a5c39e">  <td>21/04/08 16:43:12</td>   <td>26614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonNavigationTest.cloaseBrowser()[pri:0, instance:com.ecom.werbapp.test.AmazonNavigationTest@26aa12dd]">&lt;&lt;cloaseBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="f2b07d">  <td>21/04/08 16:43:13</td>   <td>27914</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionTest.hardAssert()[pri:0, instance:com.ecom.werbapp.test.AssertionTest@528931cf]">hardAssert</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="aab2ec">  <td>21/04/08 16:43:13</td>   <td>27916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertWithFacebookLogin.lauchFireFoxTest()[pri:0, instance:com.ecom.werbapp.test.SoftAssertWithFacebookLogin@ea1a8d5]">lauchFireFoxTest</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="f2b07d">  <td>21/04/08 16:43:16</td>   <td>31053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionTest.softAssert()[pri:0, instance:com.ecom.werbapp.test.AssertionTest@528931cf]">softAssert</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="aab2ec">  <td>21/04/08 16:43:17</td>   <td>31067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertWithFacebookLogin.testToVerifyLogin()[pri:1, instance:com.ecom.werbapp.test.SoftAssertWithFacebookLogin@ea1a8d5]">testToVerifyLogin</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="aab2ec">  <td>21/04/08 16:43:17</td>   <td>31865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertWithFacebookLogin.testLoginFailureOutput()[pri:2, instance:com.ecom.werbapp.test.SoftAssertWithFacebookLogin@ea1a8d5]">testLoginFailureOutput</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a3fe6e">  <td>21/04/08 16:43:18</td>   <td>32543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.lauchChromeTest()[pri:0, instance:com.ecom.werbapp.test.TestNgGroupTest@2f943d71]">lauchChromeTest</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a3fe6e">  <td>21/04/08 16:43:20</td>   <td>34969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.lauchFireFoxTest()[pri:0, instance:com.ecom.werbapp.test.TestNgGroupTest@2f943d71]">lauchFireFoxTest</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a3fe6e">  <td>21/04/08 16:43:24</td>   <td>38689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.testAmazonHomePageTitle()[pri:1, instance:com.ecom.werbapp.test.TestNgGroupTest@2f943d71]">testAmazonHomePageTitle</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a3fe6e">  <td>21/04/08 16:43:24</td>   <td>38705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.testToVerifyLogin()[pri:1, instance:com.ecom.werbapp.test.TestNgGroupTest@2f943d71]">testToVerifyLogin</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
+<tr bgcolor="a3fe6e">  <td>21/04/08 16:43:26</td>   <td>40208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.testAmazonHomePageSourceURL()[pri:2, instance:com.ecom.werbapp.test.TestNgGroupTest@2f943d71]">testAmazonHomePageSourceURL</td> 
+  <td>TestNG-tests-1@1797858276</td>   <td></td> </tr>
 </table>
