--- a/test-output/old/Amazon Test Suite/classes.html
+++ b/test-output/old/Amazon Test Suite/classes.html
@@ -4,6 +4,32 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.ecom.werbapp.test.AssertionTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>softAssert</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>hardAssert</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>com.ecom.werbapp.test.AmazonNavigationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -34,6 +60,82 @@
 <td>&nbsp;</td>
 <td>cloaseBrowser</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.ecom.werbapp.test.SoftAssertWithFacebookLogin</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testToVerifyLogin</td>
+<td>FireFox </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testLoginFailureOutput</td>
+<td>FireFox </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>lauchFireFoxTest</td>
+<td>FireFox </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.ecom.werbapp.test.TestNgGroupTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testAmazonHomePageSourceURL</td>
+<td>Chrome </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testToVerifyLogin</td>
+<td>FireFox </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testAmazonHomePageTitle</td>
+<td>Chrome </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>lauchFireFoxTest</td>
+<td>FireFox </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>lauchChromeTest</td>
+<td>Chrome </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
