--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,10 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ecom.werbapp.test.TestNgGroupTest</td>
+<td>com.ecom.werbapp.test.SoftAssertWithFacebookLogin</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>testAmazonHomePageSourceURL</td>
-<td>Chrome </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -21,13 +16,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testAmazonHomePageTitle</td>
-<td>Chrome </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>lauchChromeTest</td>
-<td>Chrome </td>
+<td>testLoginFailureOutput</td>
+<td>FireFox </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
