--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="997ed7">  <td>21/04/08 15:38:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.lauchChromeTest()[pri:0, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]">lauchChromeTest</td> 
-  <td>main@1121453612</td>   <td></td> </tr>
-<tr bgcolor="997ed7">  <td>21/04/08 15:38:13</td>   <td>3553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.lauchFireFoxTest()[pri:0, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]">lauchFireFoxTest</td> 
-  <td>main@1121453612</td>   <td></td> </tr>
-<tr bgcolor="997ed7">  <td>21/04/08 15:38:20</td>   <td>10735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.testAmazonHomePageSourceURL()[pri:2, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]">testAmazonHomePageSourceURL</td> 
-  <td>main@1121453612</td>   <td></td> </tr>
-<tr bgcolor="997ed7">  <td>21/04/08 15:38:18</td>   <td>8834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.testAmazonHomePageTitle()[pri:1, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]">testAmazonHomePageTitle</td> 
-  <td>main@1121453612</td>   <td></td> </tr>
-<tr bgcolor="997ed7">  <td>21/04/08 15:38:18</td>   <td>8857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNgGroupTest.testToVerifyLogin()[pri:1, instance:com.ecom.werbapp.test.TestNgGroupTest@9660f4e]">testToVerifyLogin</td> 
-  <td>main@1121453612</td>   <td></td> </tr>
+<tr bgcolor="997ed7">  <td>21/04/08 16:27:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertWithFacebookLogin.lauchFireFoxTest()[pri:0, instance:com.ecom.werbapp.test.SoftAssertWithFacebookLogin@711f39f9]">lauchFireFoxTest</td> 
+  <td>main@924477420</td>   <td></td> </tr>
+<tr bgcolor="997ed7">  <td>21/04/08 16:27:48</td>   <td>4539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertWithFacebookLogin.testLoginFailureOutput()[pri:2, instance:com.ecom.werbapp.test.SoftAssertWithFacebookLogin@711f39f9]">testLoginFailureOutput</td> 
+  <td>main@924477420</td>   <td></td> </tr>
+<tr bgcolor="997ed7">  <td>21/04/08 16:27:47</td>   <td>3625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertWithFacebookLogin.testToVerifyLogin()[pri:1, instance:com.ecom.werbapp.test.SoftAssertWithFacebookLogin@711f39f9]">testToVerifyLogin</td> 
+  <td>main@924477420</td>   <td></td> </tr>
 </table>
